[gd_scene load_steps=4 format=3 uid="uid://cwncwruhbq443"]

[ext_resource type="Script" path="res://Scripts/GameOverOverlay.gd" id="1_8sgfo"]
[ext_resource type="Theme" uid="uid://sc8pk13o4m7a" path="res://Themes/DefaultTheme.tres" id="1_afopl"]
[ext_resource type="PackedScene" uid="uid://boevsd2mkn655" path="res://Scenes/UIButtons.tscn" id="3_gwp4t"]

[node name="GameOverOverlay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8sgfo")

[node name="PanelContainer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_afopl")
color = Color(0, 0, 0.101961, 0.560784)

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 100.0
offset_top = 100.0
offset_right = 1850.0
offset_bottom = 253.0
theme = ExtResource("1_afopl")
theme_override_font_sizes/font_size = 150
text = "Game Over"
horizontal_alignment = 1

[node name="Winner" type="Label" parent="."]
layout_mode = 2
offset_left = 100.0
offset_top = 352.0
offset_right = 1850.0
offset_bottom = 505.0
theme = ExtResource("1_afopl")
theme_override_font_sizes/font_size = 250
text = "PLAYER X WON!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -477.0
offset_right = 264.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="Restart" parent="VBoxContainer" instance=ExtResource("3_gwp4t")]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
text = "Restart"

[node name="MainMenu" parent="VBoxContainer" instance=ExtResource("3_gwp4t")]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Restart")
text = "Main Menu
"

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
